# authshield-lab

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/analytics/: __init__.py
backend/app/analytics/api/: analytics_routes.py
backend/app/analytics/events/: analytics_event_handlers.py
backend/app/analytics/repositories/: analytics_repository_impl.py
backend/app/analytics/services/: a11y_analytics_service.py  analytics_center_service.py  assessment_analytics_service.py  content_health_service.py  continuous_improvement_service.py  curriculum_evaluation_service.py  learning_quality_service.py  program_evaluation_service.py
backend/app/analytics/validators/: analytics_validator.py
backend/app/api/v1/: health.py  router.py
backend/app/attacks/: __init__.py
backend/app/audit/: __init__.py
backend/app/audit/api/: __init__.py  routes.py
backend/app/audit/domain/: __init__.py
backend/app/audit/services/: __init__.py  audit_service.py
backend/app/audit/validators/: __init__.py
backend/app/authentication/: __init__.py
backend/app/authentication/api/: __init__.py  routes.py
backend/app/authentication/domain/: __init__.py
backend/app/authentication/events/: __init__.py  event_publisher.py
backend/app/authentication/services/: __init__.py  authentication_service.py  login_service.py  logout_service.py  password_policy_service.py  password_verification_service.py  registration_service.py  session_service.py
backend/app/authentication/validators/: __init__.py  authentication_validator.py
backend/app/certification/: __init__.py
backend/app/certification/api/: certification_routes.py
backend/app/certification/events/: certification_event_handlers.py
backend/app/certification/repositories/: certification_repository_impl.py
backend/app/certification/services/: certification_service.py  disaster_recovery_service.py  operations_service.py  platform_validation_service.py  release_engineering_service.py  sustainability_service.py
backend/app/certification/validators/: certification_validator.py
backend/app/collaboration/: __init__.py
backend/app/collaboration/api/: collaboration_routes.py
backend/app/collaboration/events/: collaboration_event_handlers.py
backend/app/collaboration/repositories/: collaboration_repository_impl.py
backend/app/collaboration/services/: academic_hub_service.py  curriculum_exchange_service.py  knowledge_base_service.py  package_validation_service.py  peer_review_service.py  research_service.py
backend/app/collaboration/validators/: collaboration_validator.py
backend/app/config/: __init__.py  constants.py  settings.py
backend/app/content/: __init__.py
backend/app/content/api/: content_routes.py
backend/app/content/events/: content_event_handlers.py
backend/app/content/repositories/: content_repository_impl.py
backend/app/content/services/: course_service.py  knowledge_service.py  lesson_service.py  media_service.py  publishing_service.py  quiz_service.py
backend/app/content/validators/: content_validator.py
backend/app/content_studio/: __init__.py
backend/app/content_studio/api/: __init__.py  content_studio_routes.py
backend/app/content_studio/domain/: __init__.py
backend/app/content_studio/events/: __init__.py  content_studio_event_handlers.py
backend/app/content_studio/repositories/: __init__.py  content_studio_repository_impl.py
backend/app/content_studio/services/: __init__.py  a11y_validator_service.py  course_designer_service.py  lesson_builder_service.py  multimedia_service.py  publishing_center_service.py  review_center_service.py  template_studio_service.py  virtual_lab_service.py
backend/app/content_studio/validators/: __init__.py  content_studio_validator.py
backend/app/defenses/: __init__.py
backend/app/defenses/api/: __init__.py  routes.py
backend/app/defenses/policy/: __init__.py
backend/app/developer/: __init__.py
backend/app/developer/api/: developer_routes.py
backend/app/developer/events/: developer_event_handlers.py
backend/app/developer/repositories/: developer_repository_impl.py
backend/app/developer/services/: api_explorer_service.py  automation_service.py  developer_tools_service.py  extension_service.py  package_service.py  sdk_service.py  template_service.py  validation_service.py
backend/app/developer/validators/: developer_validator.py
backend/app/ecosystem/: __init__.py
backend/app/ecosystem/api/: ecosystem_routes.py
backend/app/ecosystem/events/: ecosystem_event_handlers.py
backend/app/ecosystem/repositories/: ecosystem_repository_impl.py
backend/app/ecosystem/services/: distribution_service.py  governance_validation_service.py  institution_service.py  library_service.py  marketplace_service.py  research_service.py
backend/app/ecosystem/validators/: ecosystem_validator.py
backend/app/learning/: __init__.py
backend/app/lms/: __init__.py
backend/app/lms/api/: __init__.py  lms_routes.py
backend/app/lms/domain/: __init__.py
backend/app/lms/events/: __init__.py  lms_event_handlers.py
backend/app/lms/repositories/: __init__.py  lms_repository_impl.py
backend/app/lms/services/: __init__.py  analytics_service.py  (+9 more)
backend/app/optimization/: __init__.py
backend/app/production/: __init__.py
backend/app/reports/: __init__.py
backend/app/security/: __init__.py  network_validator.py  password_hasher.py  token_manager.py
backend/app/sessions/: __init__.py
backend/app/shared/: base_model.py  database.py  exceptions.py  exceptions_v2.py  logging_config.py  responses.py
backend/app/simulation/: __init__.py
backend/app/standards/: __init__.py
backend/app/users/: __init__.py
backend/tests/integration/: conftest.py  test_authentication_flow.py  test_session_lifecycle.py  test_user_lifecycle.py
backend/tests/unit/: conftest.py
configs/python/: pyproject.toml
(+612 files in other folders)
