[project]
name = "authshieldlab-backend"
version = "1.0.0"
description = "Enterprise Authentication Security Training Platform – Backend"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # flake8-eradicate
    "PD",   # flake8-pandas
    "PLW",  # pylint warnings
    "PLR",  # pylint refactor
    "PLE",  # pylint errors
    "RUF",  # ruff-specific rules
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit (security)
    "FBT",  # flake8-boolean-trap
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "TRY",  # tryceratops
]
ignore = [
    "ANN101",  # missing type annotation for self (deprecated)
    "ANN102",  # missing type annotation for cls  (deprecated)
    "T201",    # print found – needed for SHA-256 warning
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "argon2.*",
    "jose.*",
    "structlog.*",
    "plotly.*",
    "pandas.*",
    "reportlab.*",
    "weasyprint.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
