[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authshield-lab"
version = "1.0.0"
description = "Offline-first, enterprise-grade cybersecurity education platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "AuthShield Lab Team" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Education",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.8",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "ipython>=8.26.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.27",
]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.7",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "factory-boy>=3.3.0",
    "faker>=25.4.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.5",
    "coverage[toml]>=7.5.4",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.27",
    "mkdocstrings[python]>=0.25.1",
    "mkdocs-literate-nav>=0.6.4",
    "mkdocs-section-index>=0.3.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/authshield"]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true
show-fixes = true
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "node_modules",
    ".mypy_cache",
    ".pytest_cache",
    "migrations/versions",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # Ruff-specific rules
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T20",   # flake8-print
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PD",    # pandas-vet
    "PGH",   # pygrep-hooks
    "FBT",   # flake8-boolean-trap
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "TID",   # flake8-tidy-imports
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "PL",    # pylint
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
]

[tool.ruff.lint.isort]
known-first-party = ["authshield"]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "T20", "D100"]
"src/authshield/api/routes.py" = ["PLR0913"]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
files = ["src", "tests"]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["alembic.*", "migrations.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may use DB or external services)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow tests (may take > 30s)",
    "a11y: Accessibility tests",
    "security: Security-focused tests",
    "perf: Performance and load tests",
]
addopts = [
    "--strict-markers",
    "--verbose",
    "--tb=short",
    "--cov=src/authshield",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-q",
]

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = false

[tool.coverage.run]
source = ["src/authshield"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.eggs/*",
    "setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pylint.main]
jobs = 0
load-plugins = []
ignore = ["migrations", "node_modules", ".venv"]

[tool.pylint.messages_control]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
    "R0801", # duplicate-code
]

[tool.pylint.format]
max-line-length = 120
